# cpp-boostasio-webserver-adapter

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  BUILD.md  CMakeLists.txt  README.md  RELEASENOTES.md  conanfile.py  conanfile.txt
.github/workflows/: archive-docs.yml
include/: compile_boost.sh
interface/Model/: CORSConfiguration.cpp  CORSConfiguration.h  Configuration.cpp  Reply.cpp  Request.cpp  RequestHeaders.cpp  RequestQueryStrings.cpp
src/: CMakeLists.txt
src/BoostAsioWebServerAdapter/: BaseServer.cpp  BaseServer.h  CMakeLists.txt  Connection.cpp  Connection.h  SecuredContext.cpp  SecuredContext.h  SecuredServer.cpp  SecuredServer.h  Server.cpp  Server.h  ServerFactory.cpp  ServerFactory.h  WebServer.cpp  WebServer.h
src/BoostAsioWebServerAdapter/Agents/: IRequestParserAgent.h  RequestParserAgent.cpp  RequestParserAgent.h
src/BoostAsioWebServerAdapter/Connections/: Connection.cpp  Connection.h  IConnection.h  SecuredConnection.cpp  SecuredConnection.h
src/BoostAsioWebServerAdapter/Model/: WebServicesMgr.cpp  WebServicesMgr.h
src/BoostAsioWebServerAdapter/Services/: IReplyBufferBuilderService.h  IReplyCORSHeadersBuilderService.h  IRequestHandlingService.h  IRequestURIParserService.h  ReplyBufferBuilderService.cpp  ReplyBufferBuilderService.h  ReplyCORSHeadersBuilderService.cpp  ReplyCORSHeadersBuilderService.h  RequestHandlingService.cpp  RequestHandlingService.h  RequestURIParserService.cpp  RequestURIParserService.h
src/cpp-boostasio-webserver-adapter/: Connection.cpp  WebServer.cpp
src/cpp-boostasio-webserver-adapter/Agents/: RequestParserAgent.cpp
src/cpp-boostasio-webserver-adapter/Model/: WebServicesMgr.cpp
src/cpp-boostasio-webserver-adapter/Services/: ReplyBufferBuilderService.cpp  ReplyBufferBuilderService.h  RequestHandlingService.cpp
src/demo/: main.cpp
test/BoostAsioWebServerAdapterTest/: CMakeLists.txt
test/BoostAsioWebServerAdapterTest/Helpers/: HttpClient.cpp  HttpClient.h  HttpsClient.cpp  HttpsClient.h
test/BoostAsioWebServerAdapterTest/Tests/: MimeTypesServiceTest.cpp  ReplyBufferBuilderServiceTest.cpp  ReplyCORSHeadersBuilderServiceTest.cpp  RequestHandlingServiceTest.cpp  RequestParserAgentTest.cpp  RequestURIParserServiceTest.cpp  SecuredServerTest.cpp  ServerTest.cpp
test_package/: BoostAsioWebServerAdapterExample.cpp  CMakeLists.txt  conanfile.py
